Fixed programming error with insta feed not showing up

--- a/styles.css
+++ b/styles.css
@@ -617,7 +617,7 @@ header .menu-btn:checked ~ .menu-icon:not(.steps) .navicon:after {
 		display: none;
 	}
 	.featured-fly {
-		flex-wrap: no-wrap;
+		flex-wrap: nowrap;
 		justify-content: flex-start;
 		padding-bottom: 0;
 		margin-bottom: 2rem;
